--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,168 @@
-.App {
-  text-align: center;
+.header {
+  background: hsl(0, 50%, 50%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-container,
+.container {
+  width: 800px;
+  max-width: calc(100% - 60px);
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-title {
+  font-weight: normal;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  margin: 30px auto;
+}
+
+.tasklist {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
+}
+
+.tasklist-item {
+  margin: 0;
+  padding: 0;
+  display: block;
+  padding: 15px;
+
+  width: 100%;
+  background: hsl(206, 74%, 85%);
+
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.tasklist-item-input,
+.tasklist-item-input:checked {
+  -webkit-appearance: none;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tasklist-item-left {
+  display: flex;
+  align-items: center;
 }
+
+.tasklist-item-input {
+  margin-right: 5px;
+  width: 40px !important;
+  height: 40px !important;
+  border: 2px solid #979797;
+  border-radius: 1px;
+  margin-right: 15px !important;
+  position: relative;
+  cursor: pointer;
+  background-color: white;
+}
+
+.tasklist-item-input::after {
+  opacity: 0;
+  display: block;
+  content: "";
+  width: 25px;
+  height: 25px;
+  background-color: #0a0a0a;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-65%, -75%) rotate(-45deg);
+  -webkit-clip-path: polygon(
+    0 50%,
+    20% 50%,
+    20% 80%,
+    100% 80%,
+    100% 100%,
+    0 100%
+  );
+  clip-path: polygon(0 50%, 20% 50%, 20% 80%, 100% 80%, 100% 100%, 0 100%);
+}
+
+.tasklist-item-input:checked::after {
+  opacity: 1;
+}
+
+.tasklist-item-value {
+}
+
+.tasklist-item-value.completed {
+  text-decoration: line-through;
+}
+
+.tasklist-item-button {
+  width: 40px;
+  height: 40px;
+  /* background: orange; */
+  border: none;
+  position: relative;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.tasklist-item-button::before,
+.tasklist-item-button::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  background: grey;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+
+
+  /* display: inline-block;
+  content: "\00d7"; This will render the 'X' */
+}
+
+.tasklist-item-button::before {
+  transform: translate(-50%,-50%) rotate(45deg);
+}
+
+.tasklist-item-button::after {
+  transform: translate(-50%,-50%) rotate(-45deg);
+}
+
+
+
+.tasklist-item:nth-child(2n) {
+  background: hsl(206, 74%, 75%);
+}
+
+.addTask-form {
+  margin-bottom: 30px;
+  /* background-color: orange; */
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.addTask-input {
+  flex-grow: 1;
+  display: block;
+  margin-right: 15px;
+  border-radius: 3px;
+  border: 2px solid #979797;
+  padding: 0 10px;
+  font-size: 22px;
+}
+
+.addTask-button {
+  width: 100px;
+  border-radius: 3px;
+  /* border: 1px solid #979797; */
+  border: none;
+  font-size: 22px;
+  background-color: #0e7e9f;
+  cursor: pointer;
+}
+
