--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,10 @@
 .tasklist-item-left {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  margin-right: 15px;
+  /* margin-top: 15px; */
+  margin-top: -15px;
 }
 
 .tasklist-item-input {
@@ -89,7 +93,9 @@
   margin-right: 15px !important;
   position: relative;
   cursor: pointer;
-  background-color: white;
+  background-color: white;    
+  flex-shrink: 0;
+  margin-top: 15px;
 }
 
 .tasklist-item-input::after {
@@ -119,6 +125,7 @@
 }
 
 .tasklist-item-value {
+  margin-top: 15px;
 }
 
 .tasklist-item-value.completed {
@@ -134,6 +141,7 @@
   position: relative;
   cursor: pointer;
   border-radius: 50%;
+  flex-shrink: 0;
 }
 
 .tasklist-item-button::before,
@@ -165,23 +173,29 @@
 .addTask-form {
   margin-bottom: 30px;
   /* background-color: orange; */
-  height: 60px;
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 .addTask-input {
   flex-grow: 1;
   display: block;
-  margin-right: 15px;
+  /* margin-right: 15px; */
   border-radius: 3px;
   border: 2px solid #979797;
   padding: 0 10px;
   font-size: 22px;
+  height: 60px;
+
 }
 
 .addTask-button {
-  width: 100px;
+  height: 60px;
+
+  /* width: 100px; */
+  width: 100%;
+  margin-top: 15px;
   border-radius: 3px;
   /* border: 1px solid #979797; */
   border: none;
@@ -191,3 +205,16 @@
   cursor: pointer;
 }
 
+@media (min-width: 600px) {
+  .addTask-form {
+    flex-direction: row;
+  }
+
+
+
+  .addTask-button {
+    width: 100px;
+    margin-top: 0;
+    margin-left: 15px;
+  }
+}
