--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 /* https://coolors.co/palette/e5d9f2-f5efff-cdc1ff-a594f9-7371fc */
 
+/*  */
+
 .header {
   background: #7371fc;
   color: #f5efff;
